<resources>
    <string name="app_name">WorkSafe</string>
    <string name="Login_title">Login</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="botão_login">ENTRAR</string>
    <string name="botão_esqueceu">Esqueceu a Senha?</string>
    <string name="Opções_title">Escolha uma das opções abaixo:</string>
    <string name="Primeira_opcao">Cadastrar Funcionário</string>
    <string name="Segunda_opcao">Mapa de Riscos</string>
    <string name="Terceira_opcao">Gerar Relatórios</string>
    <string name="Filtro_todos">Todos</string>
    <string name="Filtro_Leves">Leve</string>
    <string name="Filtro_Medios">Médio</string>
    <string name="Filtro_Graves">Grave</string>
    <string name="hint_filtro_data">Selecione uma data</string>
    <string name="hint_filtro_relatorio">Pré-visualizar</string>
    <string name="Pre_vizualização">Pré-visyalização do relatório...</string>
    <string name="Botao_voltar">Voltar</string>
    <string name="Botao_logout">Logout</string>
    <string name="Botao_exportar_mapa">Exportar Mapa</string>
    <string-array name="tipos_de_riscos">
        <item>Todos</item>
        <item>Leve</item>
        <item>Médio</item>
        <item>Grave</item>
    </string-array>
    <string-array name="periodo_filtro_opcoes">
        <item>Todas as datas</item>
        <item>Data específica</item>
        <item>Últimos 7 dias</item>
        <item>Últimos 30 dias</item>
    </string-array>
    <string name="exportar_relatório">Exportar relatório</string>
</resources>