<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:background="@color/azul_claro"
        android:gravity="center"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <Spinner
            android:id="@+id/spinnerRisco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Cinza_claro"
            android:layout_marginBottom="12dp"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filtrar por período:"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"/>

        <Spinner
            android:id="@+id/spinnerPeriodoFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Cinza_claro"
            android:layout_marginBottom="12dp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/inputData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_filtro_data"
            android:focusable="false"
            android:background="@color/Cinza_claro"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:drawableEnd="@drawable/ic_calendar"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnVisualizarRelatorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_filtro_relatorio"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/azul_celeste"
            android:paddingVertical="12dp"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnExportarRelatorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportar_relatório"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/azul_celeste"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="8dp"/>

    <ScrollView
        android:id="@+id/previewScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_margin="16dp"
        android:background="@color/Cinza_claro"
        android:padding="16dp"
        android:fillViewport="true">

        <TextView
            android:id="@+id/txtPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pré-visualização do relatório"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="start" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botaoVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Botao_voltar"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:backgroundTint="@color/Cinza_claro"
        app:cornerRadius="24dp"
        android:elevation="4dp"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp" />
</LinearLayout>